#ifndef COW_H
#define COW_H

//#include <stdint.h>
#include <cstdint>
#include "zone.h"

struct DeviceUID {
    uint32_t w0;
    uint32_t w1;
    uint32_t w2;
};

enum class CowState {
    SLEEP,
    QUIET,
    GRAZING,
    MOVEMENT,
};

struct Position {
    float latitude;
    float longitude;
};

struct Acceleration {
    double ax;
    double ay;
    double az;
};

class Cow {
public:
	Cow();  // Constructor vacío
	Cow(DeviceUID id);  // Constructor con parámetros (legacy)
	void init(DeviceUID id);  // Inicialización explícita

    void updatePosition(Position pos);
    void updateAcceleration(Acceleration accel);
    void updateState(CowState state);
    void updateCurrentZone(zone_t zone);
    void updateDistanceToLimit(float distance);

    DeviceUID getId() const;
    Position getPosition() const;
    Acceleration getAcceleration() const;
    CowState getState() const;
    zone_t getCurrentZone() const;
    float getDistanceToLimit() const;
    bool getIsInitialized() const;

private:
    DeviceUID id;
    Position position;
    Acceleration acceleration;
    CowState state;
    zone_t currentZone;
    float distanceToLimit;
    bool isInitialized;
};

#endif