@startuml cow_fence_class
title TPP-IntelliFence — Clases de Dominio: Cow, Fence y tipos relacionados

skinparam classAttributeIconSize 0
skinparam class {
    BackgroundColor White
    BorderColor Black
    HeaderBackgroundColor DarkSlateBlue
    HeaderFontColor White
    FontSize 12
    AttributeFontSize 11
}
skinparam enum {
    BackgroundColor LightYellow
    BorderColor DarkGoldenRod
}
skinparam ArrowColor DarkSlateGray
skinparam linetype ortho

' ──────────────────────────────────────────────
' Enums y tipos
' ──────────────────────────────────────────────
enum zone_t << (E,LightYellow) >> {
    GREEN_ZONE       = 0x00
    LIGHT_BLUE_ZONE  = 0x01
    BLUE_ZONE        = 0x02
    DARK_BLUE_ZONE   = 0x03
    YELLOW_ZONE      = 0x04
    RED_ZONE         = 0x05
    BLACK_ZONE       = 0x06
}

enum CowState << (E,LightYellow) >> {
    SLEEP
    QUIET
    GRAZING
    MOVEMENT
}

' ──────────────────────────────────────────────
' Structs auxiliares
' ──────────────────────────────────────────────
class DeviceUID << (S,LightCyan) struct >> {
    + w0 : uint32_t
    + w1 : uint32_t
    + w2 : uint32_t
}

class Position << (S,LightCyan) struct >> {
    + latitude  : float
    + longitude : float
}

class Acceleration << (S,LightCyan) struct >> {
    + ax : double
    + ay : double
    + az : double
}

class Vertex << (S,LightCyan) struct >> {
    + latitude  : float
    + longitude : float
}

class Line << (S,LightCyan) struct >> {
    + start : Vertex
    + end   : Vertex
}

' ──────────────────────────────────────────────
' Clase Cow
' ──────────────────────────────────────────────
class Cow {
    ' ── Constructores ────────────────────────
    + Cow()
    + Cow(id : DeviceUID)
    + init(id : DeviceUID) : void

    ' ── Mutators ────────────────────────────
    + updatePosition(pos : Position) : void
    + updateAcceleration(accel : Acceleration) : void
    + updateState(state : CowState) : void
    + updateCurrentZone(zone : zone_t) : void
    + updateDistanceToLimit(distance : float) : void

    ' ── Getters ─────────────────────────────
    + getId() : DeviceUID
    + getPosition() : Position
    + getAcceleration() : Acceleration
    + getState() : CowState
    + getCurrentZone() : zone_t
    + getDistanceToLimit() : float
    + getIsInitialized() : bool

    ' ── Atributos privados ──────────────────
    - id              : DeviceUID
    - position        : Position
    - acceleration    : Acceleration
    - state           : CowState
    - currentZone     : zone_t
    - distanceToLimit : float
    - isInitialized   : bool
}

' ──────────────────────────────────────────────
' Clase Fence
' ──────────────────────────────────────────────
class Fence {
    ' ── Constantes (macros) ─────────────────
    ' MAX_VERTICES = 10
    ' TOTAL_TRESHOLDS = 5

    ' ── Constructor ─────────────────────────
    + Fence()
    + init() : void

    ' ── Gestión de límites ──────────────────
    + createLimits(v : Vertex*, count : uint8_t) : void

    ' ── Getters ─────────────────────────────
    + getLimits() : const Line*
    + getLimitCount() : uint8_t
    + getCenterFence() : Vertex
    + getIsInitialized() : bool
    + getHasValidFence() : bool
    + getThreshold(zone : zone_t) : float

    ' ── Umbrales de zona ────────────────────
    + thresholds[5] : float

    ' ── Atributos privados ──────────────────
    - limites[10]  : Line       ' Array estático de límites
    - limitCount   : uint8_t
    - centerFence  : Vertex
    - lightBlue    : float      ' threshold_t
    - blue         : float
    - darkBlue     : float
    - yellow       : float
    - red          : float
    - isInitialized : bool
    - hasValidFence : bool

    ' ── Métodos privados ────────────────────
    - updateCenterFence(v : Vertex*, count : uint8_t) : void
    - setZoneThresholds() : void
}

' ──────────────────────────────────────────────
' Relaciones
' ──────────────────────────────────────────────
Cow "1" *-- "1" DeviceUID    : tiene >
Cow "1" *-- "1" Position     : tiene >
Cow "1" *-- "1" Acceleration : tiene >
Cow ..> CowState : <<usa>>
Cow ..> zone_t   : <<usa>>

Fence "1" *-- "0..10" Line   : limites >
Line  "1" *-- "2"     Vertex : start/end >
Fence ..> zone_t             : <<usa>>

note bottom of Fence
  Sin allocación dinámica (embedded-friendly)
  MAX_VERTICES = 10, TOTAL_TRESHOLDS = 5
  Zonas ordenadas por distancia al límite:
  GREEN → LIGHT_BLUE → BLUE → DARK_BLUE
  → YELLOW → RED → BLACK
end note

@enduml
